[package]
name = "mnemonic-vault"
version = "0.1.1"
edition = "2024"
authors = ["Gabriel <041337@proton.me>"]
license = "MIT"
description = "The mnemonic vault is a layer zero (L0) vault for creating secure archives where only the owner can access their contents."
readme = "README.md"
repository = "https://github.com/0x41337/mnemonic-vault"
keywords = ["cli", "safes", "encryption", "self-sovereignty"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
cliclack = "0.3.6"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
zeroize = "1.8.1"

[dev-dependencies]
serde_json = "1.0.140"
